syntax = "proto3";

option java_package = "org.mifospay.shared.commonMain.proto";
option java_multiple_files = true;

message UserPreferences {
  string token = 1;
  string name = 2;
  string username = 3;
  string email = 4;
  string mobile_no = 5;
  int32 user_id = 6;
  int32 client_id = 7;
  string client_vpa = 8;
  int32 account_id = 9;
  string firebase_reg_id = 10;
  Client client = 11;
  User user = 12;
}

message Client {
  string name  = 1;
  string image = 2;
  string external_id = 3;
  int64 clientId = 4;
  string display_name = 5;
  string mobileNo = 6;
}

message User {
  string username = 1;
  int64 userId = 2;
  string base64EncodedAuthenticationKey = 3;
  bool authenticated = 4;
  int32 officeId = 5;
  string officeName = 6;
  repeated Role roles = 7;
  repeated string permissions = 8;
  repeated int64 clients = 9;
  bool shouldRenewPassword = 10;
  bool isTwoFactorAuthenticationRequired = 11;
}

message Role {
  string id = 1;
  string name = 2;
  string description = 3;
  bool disabled = 4;
}